--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,158 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ tournament_name }}</title>
-    <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <style>
-        h1 {
-            font-size: 2.25em;
-        }
         body {
-            background-color: #202121;
-            color: #f8f9fa;
-            font-family: 'Archivo';
-            font-size: 12px;
+            background-color: #f4f4f4;
         }
-
-        .leaderboard-header, .leaderboard-row {
-            display: flex;
-            align-items: center;
-            font-size: 1.25em;
-            background-color: #495057;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 5px;
-            margin-bottom: 1px;
-            cursor: pointer;
+        .card {
+            margin-bottom: 10px; /* Reduced margin */
+            padding: 5px; /* Added padding for better spacing */
+            font-size: 14px; /* Smaller font size to fit more entries */
         }
-
-        .leaderboard-header:nth-child(odd), .leaderboard-row:nth-child(odd) {
-            background-color: #40484f;
-        }
-
-        .leaderboard-content {
-            background-color: #495057;
-            overflow: hidden;
-            max-height: 0;
-            transition: max-height 0.5s ease-out;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        .leaderboard-icon {
-            width: 30px;
-            height: 30px;
-            margin-right: 15px;
-            cursor: pointer;
-        }
-
-        .leaderboard-score, 
-        .leaderboard-header .leaderboard-score {
-            margin-left: auto;
+        .card-header-title {
+            font-size: 14px; /* Smaller font size */
             font-weight: bold;
-            font-size: 1em;
+            display: flex;
+            justify-content: space-between;
+            align-items: center; /* Align items vertically */
         }
-
-        .rank, 
-        .leaderboard-header .rank {
-            width: 50px; /* Adjust width as needed */
+        .card-content {
+            display: none; /* Initially hide the content */
         }
-
-        .team-name, 
-        .leaderboard-header .team-name {
-            flex-grow: 1;
-            text-align: left; /* Ensures alignment */
-        }
-
         .chip {
             display: inline-block;
-            background-color: #6c757d;
-            border-radius: 10px;
             padding: 5px 10px;
-            margin: 2px;
-            cursor: pointer;
+            margin: 5px;
+            background-color: #e0e0e0;
+            border-radius: 25px;
+            font-size: 12px; /* Smaller font size for chips */
         }
-
-        .chip.highlight {
-            background-color: #28a745;
-        }
-
-        .highlight-header {
-            background-color: #28a745; /* Change this to the color you want */
+        .score {
+            color: #3273dc;
+            font-weight: bold;
         }
     </style>
-    <script>
-document.addEventListener('DOMContentLoaded', function () {
-    document.querySelectorAll('.leaderboard-header').forEach(header => {
-        header.addEventListener('click', function () {
-            const content = this.nextElementSibling;
-            if (content.style.maxHeight && content.style.maxHeight !== '0px') {
-                content.style.maxHeight = '0';
-            } else {
-                content.style.maxHeight = content.scrollHeight + 'px';
-            }
-            this.querySelector('.leaderboard-icon').classList.toggle('fa-chevron-up');
-            this.querySelector('.leaderboard-icon').classList.toggle('fa-chevron-down');
-        });
-    });
-    document.querySelectorAll('.chip').forEach(chip => {
-        chip.addEventListener('click', function (event) {
-            event.stopPropagation(); // Prevent the leaderboard from toggling
-            const isSelected = this.classList.contains('highlight');
-            const chipValue = this.textContent.trim();
-            document.querySelectorAll('.chip').forEach(c => {
-                c.classList.remove('highlight');
-            });
-            document.querySelectorAll('.leaderboard-header').forEach(header => {
-                header.classList.remove('highlight-header');
-            });
-            if (!isSelected) {
-                document.querySelectorAll('.chip').forEach(c => {
-                    if (c.textContent.trim() === chipValue) {
-                        c.classList.add('highlight');
-                        const content = c.parentNode.parentNode;
-                        if (content) {
-                            content.previousElementSibling.classList.add('highlight-header');
-                        }
-                    }
-                });
-            }
-        });
-    });
-});
-    </script>
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-4">{{ tournament_name }}</h1>
-        <div class="leaderboard-header">
-            <div class="rank">POS</div>
-            <div class="team-name">TEAM</div>
-            <i class="fas fa-chevron-down leaderboard-icon"></i>
-            <div class="leaderboard-score">SCORE</div>
-        </div>
-        {% for row in results %}
-        <div class="leaderboard-header">
-            <div class="rank">{{ row.RANK }}</div>
-            <i class="fas fa-chevron-down leaderboard-icon"></i>
-            <div class="team-name">{{ row.ENTRY_NAME }}</div>
-            <div class="leaderboard-score">{{ row.TEAM_SCORE }}</div>
-        </div>
-        <div class="leaderboard-content">
-            <div>
-                {% for selection in row.SELECTIONS.split(',') %}
-                <span class="chip">{{ selection.strip() }}</span>
-                {% endfor %}
+    <section class="section">
+        <div class="container">
+            <h1 class="title has-text-centered">{{ tournament_name }}</h1>
+            {% for row in results %}
+            <div class="card">
+                <header class="card-header" onclick="toggleContent(this)">
+                    <div class="card-header-title">
+                        <span>{{ row.RANK }}</span>
+                        <span>{{ row.ENTRY_NAME }}</span>
+                        <span class="score">{{ row.TEAM_SCORE }}</span>
+                    </div>
+                    <button class="card-header-icon" aria-label="more options">
+                        <span class="icon">
+                            <i class="fas fa-angle-down" aria-hidden="true"></i>
+                        </span>
+                    </button>
+                </header>
+                <div class="card-content">
+                    {% for selection in row.SELECTIONS.split(',') %}
+                    <span class="chip">{{ selection.strip() }}</span>
+                    {% endfor %}
+                </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
+    </section>
+
+    <script>
+        function toggleContent(header) {
+            var content = header.nextElementSibling;
+            if (content.style.display === 'block') {
+                content.style.display = 'none';
+            } else {
+                content.style.display = 'block';
+            }
+        }
+    </script>
 </body>
 
 </html>
-
