--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -77,8 +77,9 @@
             color: #3e8ed0;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
-        .tag {
+        .tag.is-info {
             margin-bottom: 30px;
+            font-size: 14px;
         }
     </style>
 </head>
